# src/api/v1/serializers/students-serializer.js
@@ -428,23 +428,23 @@ const serializeDegrees = (rawDegrees, osuId, params) => {
 };
 
 /**
- * A function to serialize raw emergent contact data
+ * A function to serialize raw emergency contact data
  *
- * @param {object[]} rawEmergentContacts raw emergent contacts
+ * @param {object[]} rawEmergencyContacts raw emergency contacts
  * @param {string} osuId 9 digits OSU ID
- * @returns {object} serialized emergent contact data
+ * @returns {object} serialized emergency contact data
  */
-const serializeEmergentContacts = (rawEmergentContacts, osuId) => {
-  const serializerArgs = getSerializerArgs(osuId, 'EmergentContactsResult', 'emergent-contacts', true);
+const serializeEmergencyContacts = (rawEmergencyContacts, osuId) => {
+  const serializerArgs = getSerializerArgs(osuId, 'EmergencyContactsResult', 'emergency-contacts', true);
   const identifierField = osuId;
 
-  _.forEach(rawEmergentContacts, (rawEmergentContact) => {
-    rawEmergentContact.priority = parseFloat(rawEmergentContact.priority);
+  _.forEach(rawEmergencyContacts, (rawEmergencyContact) => {
+    rawEmergencyContact.priority = parseFloat(rawEmergencyContact.priority);
   });
 
   return serializeJsonApi(serializerArgs, {
     identifierField,
-    emergentContacts: rawEmergentContacts,
+    emergencyContacts: rawEmergencyContacts,
   });
 };
 
@@ -462,5 +462,5 @@ export {
   serializeWorkStudy,
   serializeDualEnrollment,
   serializeDegrees,
-  serializeEmergentContacts,
+  serializeEmergencyContacts,
 };
